# habit_tracker

./: .env_template  .flake8  .gitignore  README.md  coverage.txt  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
habits/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
habits_project/: celery.py  settings.py  urls.py
nginx/: nginx.conf
notifications/: admin.py  bot.py  models.py  tasks.py  tests.py
notifications/migrations/: 0001_initial.py
